adding description and author metatag

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="Qualidade, conforto e sua melhor experiência em um só lugar, bendita seja sua beleza.">
+    <meta name="author" content="Pedro Gabriel">
     <title>Bendita Beleza | Renata Victor de Andrade.</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
